objects/PAYLIC1__Licence__c.object
<CustomObject>
    <description>Holds information about the Payonomy product licences that you have.  

You should not edit the contents unless instructed to by Payonomy, or you could render the application unusable</description>
    <fields>
        <fullName>PAYLIC1__Expires__c</fullName>
        <description>When does the current licence expire</description>
        <label>Expires</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PAYLIC1__Next_Check__c</fullName>
        <description>When is the next licence check due</description>
        <label>Next Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PAYLIC1__Product__c</fullName>
        <description>The name of the product that the licence is for</description>
        <label>Product</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYLIC1__Signature__c</fullName>
        <description>Digest of this record, used for security purposes</description>
        <label>Signature</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYLIC1__Valid_Until__c</fullName>
        <description>When is this licence check valid until</description>
        <label>Valid Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PAYLIC1__Version__c</fullName>
        <description>The version of the product that this licence is for</description>
        <label>Version</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Payonomy Licence</label>
    <nameField>
        <label>Payonomy Licence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payonomy Licences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>